--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase-storage": "^1.1.4",
     "lucide-react": "^0.468.0",
     "next": "14.2.16",
     "react": "^18",
@@ -22,11 +24,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "autoprefixer": "^10.0.1"
+    "typescript": "^5"
   }
 }
