--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/storage": "^0.13.4",
     "@tailwindcss/forms": "^0.5.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.2",
     "firebase-storage": "^1.1.4",
     "lucide-react": "^0.468.0",
     "next": "14.2.16",
