--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "firebase-storage": "^1.1.4",
     "lucide-react": "^0.468.0",
     "next": "14.2.16",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
